--- a/Shai_Kumar_R_Lookalike.ipynb
+++ b/Shai_Kumar_R_Lookalike.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMDKbmGCs70yMrWmE+cxWou",
+      "authorship_tag": "ABX9TyNyYd0kGXU2VGvXdZAhtUhU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -119,6 +119,36 @@
         "\n",
         "print(\"Lookalike.csv created successfully!\")\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Compute Similarity Scores:**\n",
+        "\n",
+        "First, we calculate a similarity score between each customer and all other customers.\n",
+        "Cosine similarity is used, which measures how \"close\" two customers are based on their profile and transaction data.\n",
+        "This similarity score is a number between 0 and 1, where 1 means two customers are very similar, and 0 means they are very different.\n",
+        "Focus on First 20 Customers:\n",
+        "\n",
+        "For this task, we only find lookalikes for the first 20 customers (CustomerIDs: C0001 to C0020).\n",
+        "For each of these customers, we compare them with all other customers to find the ones with the highest similarity scores.\n",
+        "Identify Top 3 Lookalikes:\n",
+        "\n",
+        "For each customer in the list, we sort the similarity scores in descending order (highest to lowest).\n",
+        "We skip the customer themselves (their similarity score with themselves is always 1.0) and pick the top 3 most similar customers.\n",
+        "Store Lookalikes and Scores:\n",
+        "\n",
+        "For each customer, we create a record that contains:\n",
+        "The CustomerID.\n",
+        "The CustomerIDs of the top 3 lookalike customers.\n",
+        "The similarity scores for each of these lookalikes.\n",
+        "Create a CSV File:\n",
+        "\n",
+        "We use a Python dictionary to store the lookalike data for all 20 customers."
+      ],
+      "metadata": {
+        "id": "LUY7sPZezfBX"
+      }
     }
   ]
 }
